--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "沈航绩点计算器",
+  "name": "沈阳航空航天大学绩点计算器",
   "icons": [
     {
       "src": "favicon.ico",
